# logboek-dataverwerkingen-logboek

./: Dockerfile  Makefile  README.md  docker-compose.yaml  go.work  go.work.sum  pyproject.toml  requirements.txt
.github/workflows/: build.yaml
libs/logboek-go/: README.md  context.go  context_test.go  go.mod  go.sum  handler.go  logboek.go  logboek_test.go  propegator.go
libs/logboek-go/attribute/: atttibutes.go  core.go
libs/logboek-go/http/: http.go
libs/logboek-go/proto/logboek/v1/: logboek.pb.go  logboek_grpc.pb.go
libs/logboek-python/: .gitignore  README.md  pyproject.toml  requirements-dev.txt
libs/logboek-python/src/logboek/: __init__.py  attributes.py  handlers.py  propagators.py
libs/logboek-python/src/logboek/proto/logboek/v1/: logboek_pb2.py  logboek_pb2.pyi  logboek_pb2_grpc.py
proto/logboek/v1/: logboek.proto
server/: go.mod  go.sum
server/cmd/logboek/: main.go
server/pkg/server/: grpc.go  server.go
server/pkg/storage/: cassandra.go  sqlite.go  storage.go
server/pkg/storage/schema/: cassandra.cql  sqlite.sql
